--- a/css/src/namespaced.less
+++ b/css/src/namespaced.less
@@ -153,6 +153,7 @@ nav {
     z-index: 2
     /* Keeps any <nav> above settings `outkey` spans on configuration page */
 }
+
 pre {
     overflow: auto;
     padding: 1rem;
@@ -664,6 +665,10 @@ article {
     max-width: @ini_sidebar_width;
     width: @ini_sidebar_width;
     margin-right: 1.5rem;
+}
+
+#namespaced__content nav {
+    z-index: 1;
 }
 
 #dw__toc {
